--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "start": "gulp dev",
-    "build": "gulp build --config gulpfile-build.js",
+    "build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,9 +19,12 @@
     "gulp-babel": "^7.0.0",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.9.0",
-    "gulp-file-include": "^2.0.0",
+    "gulp-css-base64": "^1.3.4",
+    "gulp-file-include": "^2.0.1",
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.0.0",
+    "gulp-img64-2": "0.0.8",
+    "gulp-inline-base64": "^0.1.5",
     "gulp-jsmin": "^0.1.5",
     "gulp-rev": "^8.1.1",
     "gulp-rev-collector": "^1.2.3",
