--- a/package.json
+++ b/package.json
@@ -17,19 +17,24 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.0",
+    "gulp-base64": "^0.1.3",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.9.0",
     "gulp-css-base64": "^1.3.4",
-    "gulp-file-include": "^2.0.1",
+    "gulp-file-include": "^2.0.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.0.0",
-    "gulp-img64-2": "0.0.8",
-    "gulp-inline-base64": "^0.1.5",
     "gulp-jsmin": "^0.1.5",
     "gulp-rev": "^8.1.1",
     "gulp-rev-collector": "^1.2.3",
     "gulp-rev-css-url": "^0.1.0",
+    "gulp-rev-delete-original": "^0.2.3",
     "gulp-sass": "^3.1.0",
     "gulp-sequence": "^0.4.6"
+  },
+  "dependencies": {
+    "art-template": "^4.12.2",
+    "fastclick": "^1.0.6",
+    "zepto": "^1.2.0"
   }
 }
